
INCLUDE_DIRECTORIES(
  ../lib/cJSON/
  ../src/
)

# set the shared libraries list
SET(SHARED_LIBRARIES m dl curl gcov)

# set the common sources list
SET(COMMON_SRC ../src/iotkit.c ../src/rest.c ../src/authorization.c ../src/authorization_token.c ../src/device_management.c ../src/device_token.c ../lib/cJSON/cJSON.c ../src/net_uuid.c test_util.c)

# set the source files list
SET(USER_MANAGEMENT_CREATE_AN_USER_SUCCESS user_management-create_an_user.c ../src/user_management.c ${COMMON_SRC})
SET(AUTHORIZATION_GET_JWT_TOKEN_SUCCESS authorization-get_user_jwt_token.c ../src/authorization.c ${COMMON_SRC})
SET(AUTHORIZATION_GET_NEW_JWT_TOKEN_SUCCESS authorization-get_user_jwt_token.c ../src/authorization.c ${COMMON_SRC})
SET(AUTHORIZATION_GET_JWT_TOKEN_INFO_SUCCESS authorization-get_user_jwt_token_info.c ../src/authorization.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_CREATE_AN_ACCOUNT_SUCCESS account_management-create_an_account.c ../src/account_management.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_RENEW_ACCOUNT_ACTIVATION_CODE_SUCCESS account_management-renew_account_activation_code.c ../src/account_management.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_GET_ACCOUNT_ACTIVATION_SUCCESS account_management-get_account_activation.c ../src/account_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_CREATE_A_DEVICE_SUCCESS device_management-create_a_device.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_ACTIVATE_A_DEVICE_SUCCESS device_management-activate_a_device.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_ACTIVATE_A_DEVICE2_SUCCESS device_management-activate_a_device2.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_DEVICE_ACTIVATION_STATUS_SUCCESS device_management-device_activation_status.c ../src/device_management.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_GET_ACCOUNT_INFORMATION_SUCCESS account_management-get_account_information.c ../src/account_management.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_UPDATE_AN_ACCOUNT_SUCCESS account_management-update_an_account.c ../src/account_management.c ${COMMON_SRC})
SET(ALERT_MANAGEMENT_GET_ALERT_INFORMATION_SUCCESS alert_management-get_alert_information.c ../src/alert_management.c ${COMMON_SRC})
SET(ALERT_MANAGEMENT_ADD_COMMENT_TO_ALERT_SUCCESS alert_management-add_comment_to_alert.c ../src/alert_management.c ${COMMON_SRC})
SET(ALERT_MANAGEMENT_GET_LIST_OF_ALERTS_SUCCESS alert_management-get_list_of_alerts.c ../src/alert_management.c ${COMMON_SRC})
SET(ALERT_MANAGEMENT_RESET_ALERT_SUCCESS alert_management-reset_alert.c ../src/alert_management.c ${COMMON_SRC})
SET(ALERT_MANAGEMENT_UPDATE_ALERT_STATUS_SUCCESS alert_management-update_alert_status.c ../src/alert_management.c ${COMMON_SRC})
SET(COMPONENT_CATALOG_CREATE_AN_COMPONENT_CATALOG_SUCCESS component_catalog-create_an_component_catalog.c ../src/component_catalog.c ${COMMON_SRC})
SET(COMPONENT_CATALOG_GET_COMPONENT_CATALOG_DETAILS_SUCCESS component_catalog-get_component_catalog_details.c ../src/component_catalog.c ${COMMON_SRC})
SET(COMPONENT_CATALOG_LIST_ALL_COMPONENT_CATALOGS_SUCCESS component_catalog-list_all_component_catalogs.c ../src/component_catalog.c ${COMMON_SRC})
SET(COMPONENT_CATALOG_UPDATE_AN_COMPONENT_CATALOG_SUCCESS component_catalog-update_an_component_catalog.c ../src/component_catalog.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_ADD_COMPONENT_SUCCESS device_management-add_component.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_GET_SENSOR_ID_SUCCESS device_management-get_sensor_id.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_IS_SENSOR_REGISTERED_SUCCESS device_management-is_sensor_registered.c ../src/device_management.c ${COMMON_SRC})
SET(DATA_API_SUBMIT_DATA_SUCCESS data_api-submit_data.c ../src/data_api.c ${COMMON_SRC})
SET(DATA_API_RETRIEVE_DATA_SUCCESS data_api-retrieve_data.c ../src/data_api.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_GET_MY_DEVICE_INFO_SUCCESS device_management-get_my_device_info.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_GET_ONE_DEVICE_INFO_SUCCESS device_management-get_one_device_info.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_LIST_ALL_ATTRIBUTES_FOR_DEVICES_SUCCESS device_management-list_all_attributes_for_devices.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_LIST_ALL_DEVICES_SUCCESS device_management-list_all_devices.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_LIST_ALL_TAGS_FOR_DEVICES_SUCCESS device_management-list_all_tags_for_devices.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_UPDATE_A_DEVICE_SUCCESS device_management-update_a_device.c ../src/device_management.c ${COMMON_SRC})
SET(INVITATION_MANAGEMENT_CREATE_INVITATION_SUCCESS invitation_management-create_invitation.c ../src/invitation_management.c ${COMMON_SRC})
SET(INVITATION_MANAGEMENT_GET_INVITATION_LIST_SEND_TO_SPECIFIC_USER_SUCCESS invitation_management-get_invitation_list_send_to_specific_user.c ../src/invitation_management.c ${COMMON_SRC})
SET(INVITATION_MANAGEMENT_GET_LIST_OF_INVITATIONS_SUCCESS invitation_management-get_list_of_invitations.c ../src/invitation_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_CREATE_RULE_AS_DRAFT_SUCCESS rule_management-create_a_rule_as_draft.c ../src/rule_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_CREATE_AN_RULE_SUCCESS rule_management-create_an_rule.c ../src/rule_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_GET_LIST_OF_RULES_SUCCESS rule_management-get_list_of_rules.c ../src/rule_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_GET_ONE_RULE_INFORMATION_SUCCESS rule_management-get_one_rule_information.c ../src/rule_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_UPDATE_AN_RULE_SUCCESS rule_management-update_an_rule.c ../src/rule_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_UPDATE_STATUS_OF_A_RULE_SUCCESS rule_management-update_status_of_a_rule.c ../src/rule_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_ACCEPT_TERMS_AND_CONDITIONS_SUCCESS user_management-accept_terms_and_conditions.c ../src/user_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_CHANGE_PASSWORD_SUCCESS user_management-change_password.c ../src/user_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_GET_USER_INFORMATION_SUCCESS user_management-get_user_information.c ../src/user_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_UPDATE_USER_ATTRIBUTES_SUCCESS user_management-update_user_attributes.c ../src/user_management.c ${COMMON_SRC})
SET(RULE_MANAGEMENT_DELETE_A_DRAFT_RULE_SUCCESS rule_management-delete_a_draft_rule.c ../src/rule_management.c ${COMMON_SRC})
SET(INVITATION_MANAGEMENT_DELETE_INVITATION_SUCCESS invitation_management-delete_invitation.c ../src/invitation_management.c ${COMMON_SRC})
SET(ADVANCED_DATA_INQUIRY_SUCCESS advanced_data_inquiry.c ../src/advanced_data_inquiry.c ${COMMON_SRC})
SET(AGGREGATED_REPORT_INTERFACE_SUCCESS aggregated_report_interface.c ../src/aggregated_report_interface.c ../src/advanced_data_inquiry.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_ADD_AN_USER_TO_ACCOUNT_SUCCESS account_management-add_an_user_to_account.c ../src/account_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_DELETE_COMPONENT_SUCCESS device_management-delete_component.c ../src/device_management.c ${COMMON_SRC})
SET(DEVICE_MANAGEMENT_DELETE_A_DEVICE_SUCCESS device_management-delete_a_device.c ../src/device_management.c ${COMMON_SRC})
SET(ACCOUNT_MANAGEMENT_DELETE_AN_ACCOUNT_SUCCESS account_management-delete_an_account.c ../src/account_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_DELETE_A_USER_SUCCESS user_management-delete_a_user.c ../src/user_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_REQUEST_CHANGE_PASSWORD_SUCCESS user_management-request_change_password.c ../src/user_management.c ${COMMON_SRC})
SET(USER_MANAGEMENT_UPDATE_FORGOT_PASSWORD_SUCCESS user_management-update_forgot_password.c ../src/user_management.c ${COMMON_SRC})

# create the executables
ADD_EXECUTABLE(authorization_get_jwt_token_success ${AUTHORIZATION_GET_JWT_TOKEN_SUCCESS})
ADD_EXECUTABLE(authorization_get_new_jwt_token_success ${AUTHORIZATION_GET_NEW_JWT_TOKEN_SUCCESS})
ADD_EXECUTABLE(authorization_get_jwt_token_info_success ${AUTHORIZATION_GET_JWT_TOKEN_INFO_SUCCESS})
ADD_EXECUTABLE(account_management_add_an_user_to_account_success ${ACCOUNT_MANAGEMENT_ADD_AN_USER_TO_ACCOUNT_SUCCESS})
ADD_EXECUTABLE(account_management_create_an_account_success ${ACCOUNT_MANAGEMENT_CREATE_AN_ACCOUNT_SUCCESS})
ADD_EXECUTABLE(account_management_delete_an_account_success ${ACCOUNT_MANAGEMENT_DELETE_AN_ACCOUNT_SUCCESS})
ADD_EXECUTABLE(account_management_get_account_activation_success ${ACCOUNT_MANAGEMENT_GET_ACCOUNT_ACTIVATION_SUCCESS})
ADD_EXECUTABLE(account_management_get_account_information_success ${ACCOUNT_MANAGEMENT_GET_ACCOUNT_INFORMATION_SUCCESS})
ADD_EXECUTABLE(account_management_renew_account_activation_code_success ${ACCOUNT_MANAGEMENT_RENEW_ACCOUNT_ACTIVATION_CODE_SUCCESS})
ADD_EXECUTABLE(account_management_update_an_account_success ${ACCOUNT_MANAGEMENT_UPDATE_AN_ACCOUNT_SUCCESS})
ADD_EXECUTABLE(advanced_data_inquiry_success ${ADVANCED_DATA_INQUIRY_SUCCESS})
ADD_EXECUTABLE(aggregated_report_interface_success ${AGGREGATED_REPORT_INTERFACE_SUCCESS})
ADD_EXECUTABLE(alert_management_add_comment_to_alert_success ${ALERT_MANAGEMENT_ADD_COMMENT_TO_ALERT_SUCCESS})
ADD_EXECUTABLE(alert_management_get_alert_information_success ${ALERT_MANAGEMENT_GET_ALERT_INFORMATION_SUCCESS})
ADD_EXECUTABLE(alert_management_get_list_of_alerts_success ${ALERT_MANAGEMENT_GET_LIST_OF_ALERTS_SUCCESS})
ADD_EXECUTABLE(alert_management_reset_alert_success ${ALERT_MANAGEMENT_RESET_ALERT_SUCCESS})
ADD_EXECUTABLE(alert_management_update_alert_status_success ${ALERT_MANAGEMENT_UPDATE_ALERT_STATUS_SUCCESS})
ADD_EXECUTABLE(component_catalog_create_an_component_catalog_success ${COMPONENT_CATALOG_CREATE_AN_COMPONENT_CATALOG_SUCCESS})
ADD_EXECUTABLE(component_catalog_get_component_catalog_details_success ${COMPONENT_CATALOG_GET_COMPONENT_CATALOG_DETAILS_SUCCESS})
ADD_EXECUTABLE(component_catalog_list_all_component_catalogs_success ${COMPONENT_CATALOG_LIST_ALL_COMPONENT_CATALOGS_SUCCESS})
ADD_EXECUTABLE(component_catalog_update_an_component_catalog_success ${COMPONENT_CATALOG_UPDATE_AN_COMPONENT_CATALOG_SUCCESS})
ADD_EXECUTABLE(data_api_retrieve_data_success ${DATA_API_RETRIEVE_DATA_SUCCESS})
ADD_EXECUTABLE(data_api_submit_data_success ${DATA_API_SUBMIT_DATA_SUCCESS})
ADD_EXECUTABLE(device_management_activate_a_device_success ${DEVICE_MANAGEMENT_ACTIVATE_A_DEVICE_SUCCESS})
ADD_EXECUTABLE(device_management_activate_a_device2_success ${DEVICE_MANAGEMENT_ACTIVATE_A_DEVICE2_SUCCESS})
ADD_EXECUTABLE(device_management_add_component_success ${DEVICE_MANAGEMENT_ADD_COMPONENT_SUCCESS})
ADD_EXECUTABLE(device_management_create_a_device_success ${DEVICE_MANAGEMENT_CREATE_A_DEVICE_SUCCESS})
ADD_EXECUTABLE(device_management_delete_a_device_success ${DEVICE_MANAGEMENT_DELETE_A_DEVICE_SUCCESS})
ADD_EXECUTABLE(device_management_delete_component_success ${DEVICE_MANAGEMENT_DELETE_COMPONENT_SUCCESS})
ADD_EXECUTABLE(device_management_device_activation_status_success ${DEVICE_MANAGEMENT_DEVICE_ACTIVATION_STATUS_SUCCESS})
ADD_EXECUTABLE(device_management_get_my_device_info_success ${DEVICE_MANAGEMENT_GET_MY_DEVICE_INFO_SUCCESS})
ADD_EXECUTABLE(device_management_get_one_device_info_success ${DEVICE_MANAGEMENT_GET_ONE_DEVICE_INFO_SUCCESS})
ADD_EXECUTABLE(device_management_get_sensor_id_success ${DEVICE_MANAGEMENT_GET_SENSOR_ID_SUCCESS})
ADD_EXECUTABLE(device_management_is_sensor_registered_success ${DEVICE_MANAGEMENT_IS_SENSOR_REGISTERED_SUCCESS})
ADD_EXECUTABLE(device_management_list_all_attributes_for_devices_success ${DEVICE_MANAGEMENT_LIST_ALL_ATTRIBUTES_FOR_DEVICES_SUCCESS})
ADD_EXECUTABLE(device_management_list_all_devices_success ${DEVICE_MANAGEMENT_LIST_ALL_DEVICES_SUCCESS})
ADD_EXECUTABLE(device_management_list_all_tags_for_devices_success ${DEVICE_MANAGEMENT_LIST_ALL_TAGS_FOR_DEVICES_SUCCESS})
ADD_EXECUTABLE(device_management_update_a_device_success ${DEVICE_MANAGEMENT_UPDATE_A_DEVICE_SUCCESS})
ADD_EXECUTABLE(invitation_management_create_invitation_success ${INVITATION_MANAGEMENT_CREATE_INVITATION_SUCCESS})
ADD_EXECUTABLE(invitation_management_delete_invitation_success ${INVITATION_MANAGEMENT_DELETE_INVITATION_SUCCESS})
ADD_EXECUTABLE(invitation_management_get_invitation_list_send_to_specific_user_success ${INVITATION_MANAGEMENT_GET_INVITATION_LIST_SEND_TO_SPECIFIC_USER_SUCCESS})
ADD_EXECUTABLE(invitation_management_get_list_of_invitations_success ${INVITATION_MANAGEMENT_GET_LIST_OF_INVITATIONS_SUCCESS})
ADD_EXECUTABLE(rule_management_create_rule_as_draft_success ${RULE_MANAGEMENT_CREATE_RULE_AS_DRAFT_SUCCESS})
ADD_EXECUTABLE(rule_management_create_an_rule_success ${RULE_MANAGEMENT_CREATE_AN_RULE_SUCCESS})
ADD_EXECUTABLE(rule_management_delete_a_draft_rule_success ${RULE_MANAGEMENT_DELETE_A_DRAFT_RULE_SUCCESS})
ADD_EXECUTABLE(rule_management_get_list_of_rules_success ${RULE_MANAGEMENT_GET_LIST_OF_RULES_SUCCESS})
ADD_EXECUTABLE(rule_management_get_one_rule_information_success ${RULE_MANAGEMENT_GET_ONE_RULE_INFORMATION_SUCCESS})
ADD_EXECUTABLE(rule_management_update_an_rule_success ${RULE_MANAGEMENT_UPDATE_AN_RULE_SUCCESS})
ADD_EXECUTABLE(rule_management_update_status_of_a_rule_success ${RULE_MANAGEMENT_UPDATE_STATUS_OF_A_RULE_SUCCESS})
ADD_EXECUTABLE(user_management_accept_terms_and_conditions_success ${USER_MANAGEMENT_ACCEPT_TERMS_AND_CONDITIONS_SUCCESS})
ADD_EXECUTABLE(user_management_change_password_success ${USER_MANAGEMENT_CHANGE_PASSWORD_SUCCESS})
ADD_EXECUTABLE(user_management_create_an_user_success ${USER_MANAGEMENT_CREATE_AN_USER_SUCCESS})
ADD_EXECUTABLE(user_management_delete_a_user_success ${USER_MANAGEMENT_DELETE_A_USER_SUCCESS})
ADD_EXECUTABLE(user_management_get_user_information_success ${USER_MANAGEMENT_GET_USER_INFORMATION_SUCCESS})
ADD_EXECUTABLE(user_management_request_change_password_success ${USER_MANAGEMENT_REQUEST_CHANGE_PASSWORD_SUCCESS})
ADD_EXECUTABLE(user_management_update_forgot_password_success ${USER_MANAGEMENT_UPDATE_FORGOT_PASSWORD_SUCCESS})
ADD_EXECUTABLE(user_management_update_user_attributes_success ${USER_MANAGEMENT_UPDATE_USER_ATTRIBUTES_SUCCESS})


SET_TARGET_PROPERTIES(authorization_get_jwt_token_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(authorization_get_new_jwt_token_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(authorization_get_jwt_token_info_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_add_an_user_to_account_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_create_an_account_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_delete_an_account_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_get_account_activation_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_get_account_information_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_renew_account_activation_code_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(account_management_update_an_account_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(advanced_data_inquiry_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(aggregated_report_interface_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(alert_management_add_comment_to_alert_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(alert_management_get_alert_information_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(alert_management_get_list_of_alerts_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(alert_management_reset_alert_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(alert_management_update_alert_status_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(component_catalog_create_an_component_catalog_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(component_catalog_get_component_catalog_details_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(component_catalog_list_all_component_catalogs_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(component_catalog_update_an_component_catalog_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(data_api_retrieve_data_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(data_api_submit_data_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_activate_a_device_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_activate_a_device2_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_add_component_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_create_a_device_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_delete_a_device_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_delete_component_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_device_activation_status_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_get_my_device_info_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_get_one_device_info_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_get_sensor_id_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_is_sensor_registered_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_list_all_attributes_for_devices_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_list_all_devices_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_list_all_tags_for_devices_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(device_management_update_a_device_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(invitation_management_create_invitation_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(invitation_management_delete_invitation_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(invitation_management_get_invitation_list_send_to_specific_user_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(invitation_management_get_list_of_invitations_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_create_rule_as_draft_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_create_an_rule_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_delete_a_draft_rule_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_get_list_of_rules_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_get_one_rule_information_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_update_an_rule_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(rule_management_update_status_of_a_rule_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_accept_terms_and_conditions_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_change_password_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_create_an_user_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_delete_a_user_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_get_user_information_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_request_change_password_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_update_forgot_password_success PROPERTIES LINKER_LANGUAGE C)
SET_TARGET_PROPERTIES(user_management_update_user_attributes_success PROPERTIES LINKER_LANGUAGE C)


# Link the executables
TARGET_LINK_LIBRARIES(authorization_get_jwt_token_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(authorization_get_new_jwt_token_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(authorization_get_jwt_token_info_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_add_an_user_to_account_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_create_an_account_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_delete_an_account_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_get_account_activation_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_get_account_information_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_renew_account_activation_code_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(account_management_update_an_account_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(advanced_data_inquiry_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(aggregated_report_interface_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(alert_management_add_comment_to_alert_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(alert_management_get_alert_information_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(alert_management_get_list_of_alerts_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(alert_management_reset_alert_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(alert_management_update_alert_status_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(component_catalog_create_an_component_catalog_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(component_catalog_get_component_catalog_details_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(component_catalog_list_all_component_catalogs_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(component_catalog_update_an_component_catalog_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(data_api_retrieve_data_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(data_api_submit_data_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_activate_a_device_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_activate_a_device2_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_add_component_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_create_a_device_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_delete_a_device_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_delete_component_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_device_activation_status_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_get_my_device_info_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_get_one_device_info_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_get_sensor_id_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_is_sensor_registered_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_list_all_attributes_for_devices_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_list_all_devices_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_list_all_tags_for_devices_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(device_management_update_a_device_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(invitation_management_create_invitation_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(invitation_management_delete_invitation_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(invitation_management_get_invitation_list_send_to_specific_user_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(invitation_management_get_list_of_invitations_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_create_rule_as_draft_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_create_an_rule_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_delete_a_draft_rule_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_get_list_of_rules_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_get_one_rule_information_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_update_an_rule_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(rule_management_update_status_of_a_rule_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_accept_terms_and_conditions_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_change_password_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_create_an_user_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_delete_a_user_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_get_user_information_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_request_change_password_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_update_forgot_password_success ${SHARED_LIBRARIES})
TARGET_LINK_LIBRARIES(user_management_update_user_attributes_success ${SHARED_LIBRARIES})


# Add the Test (commented once have to be executed manually)
#ADD_TEST(user_management_create_an_user_success ${CTEST_BINARY_DIRECTORY}/user_management_create_an_user_success)
ADD_TEST(authorization_get_jwt_token_success ${CTEST_BINARY_DIRECTORY}/authorization_get_jwt_token_success)
ADD_TEST(authorization_get_jwt_token_info_success ${CTEST_BINARY_DIRECTORY}/authorization_get_jwt_token_info_success)
ADD_TEST(account_management_create_an_account_success ${CTEST_BINARY_DIRECTORY}/account_management_create_an_account_success)
ADD_TEST(authorization_get_new_jwt_token_success ${CTEST_BINARY_DIRECTORY}/authorization_get_new_jwt_token_success)
ADD_TEST(account_management_renew_account_activation_code_success ${CTEST_BINARY_DIRECTORY}/account_management_renew_account_activation_code_success)
ADD_TEST(account_management_get_account_activation_success ${CTEST_BINARY_DIRECTORY}/account_management_get_account_activation_success)
ADD_TEST(device_management_create_a_device_success ${CTEST_BINARY_DIRECTORY}/device_management_create_a_device_success)
ADD_TEST(device_management_activate_a_device_success ${CTEST_BINARY_DIRECTORY}/device_management_activate_a_device_success)
ADD_TEST(device_management_device_activation_status_success ${CTEST_BINARY_DIRECTORY}/device_management_device_activation_status_success)
ADD_TEST(account_management_get_account_information_success ${CTEST_BINARY_DIRECTORY}/account_management_get_account_information_success)
ADD_TEST(account_management_update_an_account_success ${CTEST_BINARY_DIRECTORY}/account_management_update_an_account_success)
ADD_TEST(alert_management_get_list_of_alerts_success ${CTEST_BINARY_DIRECTORY}/alert_management_get_list_of_alerts_success)
ADD_TEST(alert_management_reset_alert_success ${CTEST_BINARY_DIRECTORY}/alert_management_reset_alert_success)
ADD_TEST(alert_management_update_alert_status_success ${CTEST_BINARY_DIRECTORY}/alert_management_update_alert_status_success)
ADD_TEST(component_catalog_create_an_component_catalog_success ${CTEST_BINARY_DIRECTORY}/component_catalog_create_an_component_catalog_success)
ADD_TEST(component_catalog_get_component_catalog_details_success ${CTEST_BINARY_DIRECTORY}/component_catalog_get_component_catalog_details_success)
ADD_TEST(component_catalog_list_all_component_catalogs_success ${CTEST_BINARY_DIRECTORY}/component_catalog_list_all_component_catalogs_success)
ADD_TEST(component_catalog_update_an_component_catalog_success ${CTEST_BINARY_DIRECTORY}/component_catalog_update_an_component_catalog_success)
ADD_TEST(device_management_add_component_success ${CTEST_BINARY_DIRECTORY}/device_management_add_component_success)
ADD_TEST(device_management_get_sensor_id_success ${CTEST_BINARY_DIRECTORY}/device_management_get_sensor_id_success)
ADD_TEST(device_management_is_sensor_registered_success ${CTEST_BINARY_DIRECTORY}/device_management_is_sensor_registered_success)
ADD_TEST(data_api_submit_data_success ${CTEST_BINARY_DIRECTORY}/data_api_submit_data_success)
ADD_TEST(data_api_retrieve_data_success ${CTEST_BINARY_DIRECTORY}/data_api_retrieve_data_success)
ADD_TEST(device_management_get_my_device_info_success ${CTEST_BINARY_DIRECTORY}/device_management_get_my_device_info_success)
ADD_TEST(device_management_get_one_device_info_success ${CTEST_BINARY_DIRECTORY}/device_management_get_one_device_info_success)
ADD_TEST(device_management_list_all_attributes_for_devices_success ${CTEST_BINARY_DIRECTORY}/device_management_list_all_attributes_for_devices_success)
ADD_TEST(device_management_list_all_devices_success ${CTEST_BINARY_DIRECTORY}/device_management_list_all_devices_success)
ADD_TEST(device_management_list_all_tags_for_devices_success ${CTEST_BINARY_DIRECTORY}/device_management_list_all_tags_for_devices_success)
ADD_TEST(device_management_update_a_device_success ${CTEST_BINARY_DIRECTORY}/device_management_update_a_device_success)
ADD_TEST(invitation_management_create_invitation_success ${CTEST_BINARY_DIRECTORY}/invitation_management_create_invitation_success)
ADD_TEST(invitation_management_get_invitation_list_send_to_specific_user_success ${CTEST_BINARY_DIRECTORY}/invitation_management_get_invitation_list_send_to_specific_user_success)
ADD_TEST(invitation_management_get_list_of_invitations_success ${CTEST_BINARY_DIRECTORY}/invitation_management_get_list_of_invitations_success)
ADD_TEST(rule_management_create_an_rule_success ${CTEST_BINARY_DIRECTORY}/rule_management_create_an_rule_success)
ADD_TEST(rule_management_get_list_of_rules_success ${CTEST_BINARY_DIRECTORY}/rule_management_get_list_of_rules_success)
ADD_TEST(rule_management_get_one_rule_information_success ${CTEST_BINARY_DIRECTORY}/rule_management_get_one_rule_information_success)
ADD_TEST(rule_management_update_an_rule_success ${CTEST_BINARY_DIRECTORY}/rule_management_update_an_rule_success)
ADD_TEST(rule_management_update_status_of_a_rule_success ${CTEST_BINARY_DIRECTORY}/rule_management_update_status_of_a_rule_success)
ADD_TEST(rule_management_create_rule_as_draft_success ${CTEST_BINARY_DIRECTORY}/rule_management_create_rule_as_draft_success)
ADD_TEST(rule_management_delete_a_draft_rule_success ${CTEST_BINARY_DIRECTORY}/rule_management_delete_a_draft_rule_success)
ADD_TEST(user_management_acceterms_and_conditions_success ${CTEST_BINARY_DIRECTORY}/user_management_accept_terms_and_conditions_success)
ADD_TEST(user_management_change_password_success ${CTEST_BINARY_DIRECTORY}/user_management_change_password_success)
ADD_TEST(user_management_get_user_information_success ${CTEST_BINARY_DIRECTORY}/user_management_get_user_information_success)
ADD_TEST(user_management_update_user_attributes_success ${CTEST_BINARY_DIRECTORY}/user_management_update_user_attributes_success)
ADD_TEST(invitation_management_delete_invitation_success ${CTEST_BINARY_DIRECTORY}/invitation_management_delete_invitation_success)
ADD_TEST(advanced_data_inquiry_success ${CTEST_BINARY_DIRECTORY}/advanced_data_inquiry_success)
ADD_TEST(aggregated_report_interface_success ${CTEST_BINARY_DIRECTORY}/aggregated_report_interface_success)
ADD_TEST(account_management_add_an_user_to_account_success ${CTEST_BINARY_DIRECTORY}/account_management_add_an_user_to_account_success)
ADD_TEST(device_management_delete_component_success ${CTEST_BINARY_DIRECTORY}/device_management_delete_component_success)
ADD_TEST(device_management_delete_a_device_success ${CTEST_BINARY_DIRECTORY}/device_management_delete_a_device_success)
ADD_TEST(account_management_delete_an_account_success ${CTEST_BINARY_DIRECTORY}/account_management_delete_an_account_success)
ADD_TEST(user_management_delete_a_user_success ${CTEST_BINARY_DIRECTORY}/user_management_delete_a_user_success)

#ADD_TEST(device_management_activate_a_device2_success ${CTEST_BINARY_DIRECTORY}/device_management_activate_a_device2_success)
#ADD_TEST(alert_management_get_alert_information_success ${CTEST_BINARY_DIRECTORY}/alert_management_get_alert_information_success)
#ADD_TEST(alert_management_add_comment_to_alert_success ${CTEST_BINARY_DIRECTORY}/alert_management_add_comment_to_alert_success)
#ADD_TEST(user_management_request_change_password_success ${CTEST_BINARY_DIRECTORY}/user_management_request_change_password_success)
#ADD_TEST(user_management_update_forgot_password_success ${CTEST_BINARY_DIRECTORY}/user_management_update_forgot_password_success)
